# Raspberry_GTK_LED_Control

./: CMakeLists.txt
glade/: window_main.glade
include/: led_interface.h
src/: gtk_led.c
src/platform/pc/: led_process.c
src/platform/raspberry/: led_process.c
